fix of typos and explanation improvements

--- a/concepts/product/test.mdx
+++ b/concepts/product/test.mdx
@@ -45,7 +45,7 @@ Galtea supports two main types of tests:
     Tests that evaluate the quality and correctness of outputs
   </Card>
   <Card title="Red Teaming Tests" icon="shield-halved" href="/concepts/product/test/red-teaming-tests">
-    Tests that evaluate security, safety, and bias aspects
+    Tests that evaluate security, safety, and bias aspects, often by generating adversarial inputs based on defined threats and applying various strategies to make them more challenging.
   </Card>
 </CardGroup>
 
