--- a/concepts/product/test/quality-tests.mdx
+++ b/concepts/product/test/quality-tests.mdx
@@ -21,11 +21,11 @@ You can create quality tests in Galtea through two methods:
       <Step title="Configure the test">
         Select *Quality* as the test type and *Generated* as the test origin
         <Info>
-          The test creation process acan be done via the [SDK](/sdk/api/test/service#create-test) or the [Galtea dashboard](https://platform.galtea.ai/)
+          The test creation process can be done via the [SDK](/sdk/api/test/service#create-test) or the [Galtea dashboard](https://platform.galtea.ai/)
         </Info>
       </Step>
       <Step title="Generate the test">
-        Galtea will process the Knowledge Base and generate a *Test File* and *Test Cases* for you
+        Galtea will process the Knowledge Base and generate a *Test File* containing *Test Cases* for you
       </Step>
     </Steps>
   </Tab>
@@ -37,7 +37,7 @@ You can create quality tests in Galtea through two methods:
       <Step title="Configure the test">
         Select "Quality" as the test type and "Uploaded" as the test origin
         <Info>
-          The test creation process acan be done via the [SDK](/sdk/api/test/service#create-test) or the [Galtea dashboard](https://platform.galtea.ai/)
+          The test creation process can be done via the [SDK](/sdk/api/test/service#create-test) or the [Galtea dashboard](https://platform.galtea.ai/)
         </Info>
       </Step>
       <Step title="Upload your test file">
