references to deepeval added

--- a/concepts/product/metrics/contextual-precision.mdx
+++ b/concepts/product/metrics/contextual-precision.mdx
@@ -35,6 +35,9 @@ $$
 
 Where **k** is a configurable cutoff (e.g., top 5 or top 10). This helps gauge whether the most useful content is easily accessible to the generator.
 
+<Note>This metric was incorporated to the Galtea platform from the open source library [deepeval](https://deepeval.com/), for more information you can also visit their [documentation](https://deepeval.com/docs/metrics-contextual-precision).</Note>
+
+
 ---
 
 ## Related Topics
