--- a/concepts/product/metrics/contextual-relevancy.mdx
+++ b/concepts/product/metrics/contextual-relevancy.mdx
@@ -34,6 +34,9 @@ $$
 
 A higher score indicates that the retriever is effectively sourcing information that is pertinent to the user's query.
 
+<Note>This metric was incorporated to the Galtea platform from the open source library [deepeval](https://deepeval.com/), for more information you can also visit their [documentation](https://deepeval.com/docs/metrics-contextual-relevancy).</Note>
+
+
 ---
 
 ## Related Topics
