--- a/concepts/product/metrics/conversational-completeness.mdx
+++ b/concepts/product/metrics/conversational-completeness.mdx
@@ -36,6 +36,9 @@ $$
 
 Scores closer to **1** suggest a high rate of successful task completion and indicate that users can rely on the chatbot to reach their goals.
 
+<Note>This metric was incorporated to the Galtea platform from the open source library [deepeval](https://deepeval.com/), for more information you can also visit their [documentation](https://deepeval.com/docs/metrics-conversation-completeness).</Note>
+
+
 ---
 
 ## Related Topics
