--- a/concepts/product/metrics/conversational-relevancy.mdx
+++ b/concepts/product/metrics/conversational-relevancy.mdx
@@ -36,6 +36,9 @@ $$
 
 Scores range from **0** (entirely off-topic) to **1** (fully relevant throughout), helping you monitor and improve conversational quality at scale.
 
+<Note>This metric was incorporated to the Galtea platform from the open source library [deepeval](https://deepeval.com/), for more information you can also visit their [documentation](https://deepeval.com/docs/metrics-conversation-relevancy).</Note>
+
+
 ---
 
 ## Related Topics
