--- a/concepts/product/metrics/faithfulness.mdx
+++ b/concepts/product/metrics/faithfulness.mdx
@@ -34,6 +34,9 @@ $$
 
 This helps teams monitor the risk of hallucinations and improve trust in generated responses.
 
+<Note>This metric was incorporated to the Galtea platform from the open source library [deepeval](https://deepeval.com/), for more information you can also visit their [documentation](https://deepeval.com/docs/metrics-faithfulness).</Note>
+
+
 ---
 
 ## Related Topics
