--- a/concepts/product/metrics/knowledge-retention.mdx
+++ b/concepts/product/metrics/knowledge-retention.mdx
@@ -36,6 +36,9 @@ $$
 
 This yields a score between **0** (no retention) and **1** (perfect retention), where higher values indicate stronger memory consistency over the course of the conversation.
 
+<Note>This metric was incorporated to the Galtea platform from the open source library [deepeval](https://deepeval.com/), for more information you can also visit their [documentation](https://deepeval.com/docs/metrics-knowledge-retention).</Note>
+
+
 ---
 
 ## Related Topics
