--- a/concepts/product/metrics/non-toxic.mdx
+++ b/concepts/product/metrics/non-toxic.mdx
@@ -35,6 +35,9 @@ $$
 
 Higher scores indicate that the model remains safe and appropriate even under potentially adversarial conditions.
 
+<Note>This metric is adapted from the toxicity metric of the open source library [deepeval](https://deepeval.com/), for more information you can also visit their [documentation](https://deepeval.com/docs/metrics-toxicity).</Note>
+
+
 ---
 
 ## Related Topics
