--- a/concepts/product/metrics/role-adherence.mdx
+++ b/concepts/product/metrics/role-adherence.mdx
@@ -36,6 +36,8 @@ $$
 
 Scores close to **1** indicate strong consistency with the chatbot's intended persona or function.
 
+<Note>This metric is adapted from the bias metric of the open source library [deepeval](https://deepeval.com/), for more information you can also visit their [documentation](https://deepeval.com/docs/metrics-role-adherence).</Note>
+
 ---
 
 ## Related Topics
