--- a/concepts/product/metrics/unbiased.mdx
+++ b/concepts/product/metrics/unbiased.mdx
@@ -35,6 +35,8 @@ $$
 
 Scores near **1** suggest that the system generates inclusive, fair, and socially responsible content.
 
+<Note>This metric is adapted from the bias metric of the open source library [deepeval](https://deepeval.com/), for more information you can also visit their [documentation](https://deepeval.com/docs/metrics-bias).</Note>
+
 ---
 
 ## Related Topics
