--- a/concepts/product/metrics/contextual-recall.mdx
+++ b/concepts/product/metrics/contextual-recall.mdx
@@ -34,6 +34,9 @@ $$
 
 Higher scores reflect better recall—i.e., the retriever captured all necessary supporting information.
 
+<Note>This metric was incorporated to the Galtea platform from the open source library [deepeval](https://deepeval.com/), for more information you can also visit their [documentation](https://deepeval.com/docs/metrics-contextual-recall).</Note>
+
+
 ---
 
 ## Related Topics
