--- a/migration-to-v2.mdx
+++ b/migration-to-v2.mdx
@@ -1,294 +1,142 @@
----
-title: 'Migrating to Galtea SDK v2'
-description: "Guide for migrating your Galtea SDK integrations from v1.x to v2.0, focusing on changes to evaluation and evaluation task creation."
-icon: "arrow-right-arrow-left"
----
+# Migrating to Galtea SDK v2.0
 
-Welcome to Galtea SDK v2! This version introduces a streamlined workflow for creating evaluations and evaluation tasks, making it simpler to integrate Galtea into your development and monitoring processes.
+Welcome to Galtea SDK v2.0! This version introduces major improvements, including a new session-based evaluation workflow and simplifications to the existing test-based workflow.
 
-This guide will walk you through the necessary changes to update your existing SDK v1.x integrations.
+This guide will walk you through the necessary changes to update your SDK v1.x integrations and introduce you to the new features available in v2.0.
 
-## Key Changes in v2.0
+## Part 1: Migrating Your Existing Workflow (Test-Case-Based Evaluation)
 
-The most significant changes in SDK v2.0 revolve around how evaluations and evaluation tasks are handled:
+The core workflow for running predefined tests against a version has been streamlined.
 
-1. **Version Creation**: The `galtea.versions.create()` method now accepts all version properties as direct parameters instead of requiring an `optional_properties` dictionary. This change simplifies the creation of versions by making it more explicit and easier to read.
+### Key Changes for Test-Based Evaluations
 
-   - **New Parameters**: You can now pass `description`, `system_prompt`, `model_id`, and other properties directly as parameters when creating a version.
-   - **Example**:
-     ```python
-     version = galtea.versions.create(
-         name="v2.0",
-         product_id="YOUR_PRODUCT_ID",
-         description="Initial version with basic summarization capabilities",
-         system_prompt="You are a helpful assistant that summarizes text.",
-         model_id="YOUR_MODEL_ID"
-     )
-     ``` 
+1.  **Simplified Version Creation**: The `galtea.versions.create()` method now accepts all properties as direct keyword arguments, removing the need for the `optional_props` dictionary.
 
-2. **Implicit Evaluation Creation**: You no longer need to explicitly call `galtea.evaluations.create()` before creating evaluation tasks. Evaluations (which group [inference results](/concepts/product/inference-result) for assessment) are now automatically created or managed by the Galtea backend when the first evaluation task for a specific `version_id` and `test_case_id` (or `input` for production tasks) is submitted.
+2.  **Implicit Evaluation Creation**: You no longer need to explicitly call `galtea.evaluations.create()` before creating evaluation tasks. An `Evaluation` (which links a `Test` and a `Version`) is now created automatically by the backend when the first evaluation task for that pair is submitted.
 
-3. **`version_id` in `evaluation_tasks.create()`**: The `galtea.evaluation_tasks.create()` method now requires a `version_id` parameter directly, replacing the previous need to pass an `evaluation_id`.
+3.  **`evaluation_tasks.create()` Signature Change**: The `evaluation_id` parameter is removed and replaced by a required `version_id`. The backend will automatically determine the correct evaluation to associate the task with.
 
-4. **`evaluation_id` Removed from `evaluation_tasks.create()`**: Consequently, the `evaluation_id` parameter has been removed from `galtea.evaluation_tasks.create()`.
+### Migration Diff: Test-Case Workflow
 
-These changes simplify your scripts and make the process more intuitive, aligning `evaluation_tasks.create()` more closely with `evaluation_tasks.create_from_production()`, which already used `version_id`.
+Here’s a side-by-side comparison of a typical v1 script and its direct v2 equivalent.
 
-## What else is new in v2.0?
-
-1. **Session Object for Grouping Inference Results**: Now, all inference results are grouped under a [session](/concepts/product/session) object. You can explicitly create this session yourself, or let Galtea create it automatically for you when you submit inference results.
-
-  This session can be used to track conversations or interactions over multiple turns, making it easier to manage and evaluate complex user interactions.
-  
-    - **Session Creation**: You can create a session using `galtea.sessions.create()`, which allows you to specify the context and other metadata for the session.
-    - **Inference Results in Sessions**: When you submit inference results, you can associate them with a specific session, enabling better tracking of multi-turn conversations or user interactions.
-
-2. **Inference Results**: The `galtea.inference_results.create()` method allows you to store inference results directly in a session. This is useful for tracking complete conversations between a user and your product so that you can evaluate them later.
-
-3. **Create Evaluation Tasks from Sessions**: You can now create evaluation tasks directly from sessions. This is especially useful if you want to wait for a conversation to finish, or whenever you have a complete conversation ready to be evaluated. This enables batch evaluation of all inference results in a session, making it easier to assess real user interactions or multi-turn conversations.
-
-## Quick Migration Diff
-
-Here's a side-by-side comparison showing exactly what to change in your scripts:
-
-### ❌ Remove (SDK v1.x)
+#### ❌ SDK v1.x (Old Way)
 ```python
-# 1. Remove optional_properties parameter from galtea.versions.create()
-evaluation = galtea.versions.create(
-    name="v1.0",
+from galtea import Galtea
+galtea = Galtea(api_key="...")
+
+# 1. Create version with optional_props dictionary
+version = galtea.versions.create(
+    name="v1.0-summarizer",
     product_id="YOUR_PRODUCT_ID",
-    optional_properties={  # ❌ Remove this parameter
-      "description": "Initial version with basic summarization capabilities",
-      "system_prompt": "You are a helpful assistant that summarizes text.",
-      "model_id": "YOUR_MODEL_ID"
-    }  # ❌ Remove this line
-)
-
-# 2. Remove explicit evaluation creation
-evaluation = galtea.evaluations.create(  # ❌ Remove this instantiation
-    test_id="YOUR_TEST_ID",
-    version_id=version.id
-)
-
-# 3. Remove evaluation_id parameter from evaluation_tasks.create()
-galtea.evaluation_tasks.create(
-    evaluation_id=evaluation.id,  # ❌ Remove this line
-    metrics=["your_metric"],
-    test_case_id="YOUR_TEST_CASE_ID",
-    actual_output="Your output"
-)
-```
-
-### ✅ Add (SDK v2.0)
-```python
-# 1. Create version (now with all properties as direct parameters)
-version = galtea.versions.create(
-    name="v2.0",
-    product_id="YOUR_PRODUCT_ID",
-    description="Initial version with basic summarization capabilities",  # ✅ Add this line
-    system_prompt="You are a helpful assistant that summarizes text.",  # ✅ Add this line
-    model_id="YOUR_MODEL_ID"  # ✅ Add this line
-)
-
-# 2. Skip evaluation creation - it's automatic now!
-# (No galtea.evaluations.create() needed)
-
-# 3. Add version_id parameter to evaluation_tasks.create()
-galtea.evaluation_tasks.create(
-    version_id=version.id,  # ✅ Add this line
-    metrics=["your_metric"],
-    test_case_id="YOUR_TEST_CASE_ID",
-    actual_output="Your output"
-)
-```
-
-### Complete Before/After Example
-
-<details>
-<summary>📜 **Before (SDK v1.x)** - Click to expand</summary>
-
-```python
-from galtea import Galtea
-
-galtea = Galtea(api_key="YOUR_API_KEY")
-
-# Create version
-version = galtea.versions.create(
-    name="v1.0",
-    product_id="YOUR_PRODUCT_ID"
-)
-
-# ❌ Step 1: Explicitly create evaluation
-evaluation = galtea.evaluations.create(
-    test_id="YOUR_TEST_ID",
-    version_id=version.id
-)
-
-# ❌ Step 2: Create tasks using evaluation_id
-galtea.evaluation_tasks.create(
-    evaluation_id=evaluation.id,
-    metrics=["accuracy_v1"],
-    test_case_id="YOUR_TEST_CASE_ID",
-    actual_output="Barcelona"
-)
-```
-</details>
-
-<details>
-<summary>🎉 **After (SDK v2.0)** - Click to expand</summary>
-
-```python
-from galtea import Galtea
-
-galtea = Galtea(api_key="YOUR_API_KEY")
-
-# Create version (unchanged)
-version = galtea.versions.create(
-    name="v2.0",
-    product_id="YOUR_PRODUCT_ID"
-)
-
-# ✅ Step 1: Create tasks directly with version_id
-# (Evaluation is created automatically!)
-galtea.evaluation_tasks.create(
-    version_id=version.id,
-    metrics=["accuracy_v1"],
-    test_case_id="YOUR_TEST_CASE_ID",
-    actual_output="Barcelona"
-)
-```
-</details>
-
-## How to Migrate Your Code
-
-Let's look at a typical v1.x workflow and how it translates to v2.0.
-
-### Old Workflow (SDK v1.x)
-
-In v1.x, you would first create an `Evaluation` object and then use its ID to create `EvaluationTask` objects:
-
-```python
-# SDK v1.x Example
-from galtea import Galtea
-
-galtea = Galtea(api_key="YOUR_API_KEY")
-
-YOUR_PRODUCT_ID = "your_product_id"
-YOUR_TEST_ID = "your_test_id"
-YOUR_TEST_CASE_ID = "your_test_case_id"
-YOUR_METRIC_NAME = "your_metric_name"
-
-# 1. Create a Version (the optional properties were wrapped in a dict)
-version = galtea.versions.create(
-    name="v2.0-example",
-    product_id=YOUR_PRODUCT_ID,
-    optional_properties={  # Optional properties can be set directly
-      "description": "Initial version with basic summarization capabilities",
-      "system_prompt": "You are a helpful assistant that summarizes text.",
-      "model_id": "YOUR_MODEL_ID"
+    optional_props={
+      "description": "Old version using gpt-3.5",
+      "model_id": "gpt-3.5-turbo"
     }
 )
-print(f"Created Version: {version.id}")
 
 # 2. Explicitly create an Evaluation
 evaluation = galtea.evaluations.create(
-    test_id=YOUR_TEST_ID,
+    test_id="YOUR_TEST_ID",
     version_id=version.id
 )
-print(f"Created Evaluation: {evaluation.id}")
 
-# 3. Create Evaluation Tasks using evaluation_id
-# (Assuming your_product_function(input) returns the actual output)
-test_case = galtea.test_cases.get(YOUR_TEST_CASE_ID) # Fetch a test case
-actual_output = your_product_function(test_case.input)
-
+# 3. Create tasks using evaluation_id
 galtea.evaluation_tasks.create(
     evaluation_id=evaluation.id,
-    metrics=[YOUR_METRIC_NAME],
-    test_case_id=test_case.id,
-    actual_output=actual_output
+    metrics=["your_metric"],
+    test_case_id="YOUR_TEST_CASE_ID",
+    actual_output="This is the model's output."
 )
-print(f"Submitted evaluation task for test case {test_case.id} under evaluation {evaluation.id}")
 ```
 
-### New Workflow (SDK v2.0)
+#### ✅ SDK v2.0 (New Way)
+```python
+from galtea import Galtea
+galtea = Galtea(api_key="...")
 
-In v2.0, your workflow is centered around the concept of a **session**. All inference results are now grouped under a session, which can be created explicitly by you (using `galtea.sessions.create()`) or implicitly by Galtea when you create a new evaluation task without a session and pass directly the conversation. This makes it easy to track and evaluate conversations or user interactions as a whole.
+# 1. Create version with direct keyword arguments
+version = galtea.versions.create(
+    name="v2.0-summarizer",
+    product_id="YOUR_PRODUCT_ID",
+    description="New version using gpt-4",
+    model_id="gpt-4"
+)
 
-You can store inference results in a session as they are generated, and when you are ready—such as after a conversation is complete—you can create evaluation tasks for all results in that session. This enables both real-time and batch evaluation of multi-turn conversations or user sessions.
+# 2. Skip explicit evaluation creation (it's automatic!)
+
+# 3. Create tasks using version_id
+galtea.evaluation_tasks.create(
+    version_id=version.id,
+    metrics=["your_metric"],
+    test_case_id="YOUR_TEST_CASE_ID",
+    actual_output="This is the model's output."
+)
+```
+
+### Summary of Actions for Migration
+
+1.  In `galtea.versions.create()` calls, remove the `optional_props` dictionary and pass its contents as direct keyword arguments.
+2.  **Remove** all calls to `galtea.evaluations.create()`.
+3.  In `galtea.evaluation_tasks.create()` calls, **remove** the `evaluation_id` parameter and **add** the `version_id` parameter.
+
+---
+
+## Part 2: What's New in v2.0 - The Session-Based Workflow
+
+SDK v2.0 introduces a powerful new way to log and evaluate multi-turn conversations through **Sessions** and **Inference Results**. This is ideal for monitoring production traffic or evaluating complex, interactive scenarios.
+
+### New Concepts
+
+*   **Session**: A container for a sequence of interactions (a conversation) between a user and your AI product. You can create a session using `galtea.sessions.create()`.
+*   **Inference Result**: A single turn within a session, containing the `input` and `output`. You log these using `galtea.inference_results.create()`.
+*   **`evaluation_tasks.create_from_session()`**: A new method to run evaluations on all inference results within a given session. This allows for easy batch evaluation of entire conversations.
+
+### Example of the New Session-Based Workflow
+
+This workflow is entirely new and does not directly replace the test-based workflow. You can use it alongside your existing tests.
 
 ```python
-# SDK v2.0 Example
+# SDK v2.0 New Workflow Example
 from galtea import Galtea
 
 galtea = Galtea(api_key="YOUR_API_KEY")
 
 YOUR_PRODUCT_ID = "your_product_id"
-YOUR_SESSION_ID = "your_session_id"  # You can create this or let Galtea do it automatically
-YOUR_TEST_CASE_ID = "your_test_case_id"  # This implies a test_id
+YOUR_VERSION_ID = "your_version_id"
 YOUR_METRIC_NAME = "your_metric_name"
 
-# 1. Create a Session (optional, can be implicit)
+# 1. Create a Session to group a conversation
 session = galtea.sessions.create(
-    id=YOUR_SESSION_ID,
-    product_id=YOUR_PRODUCT_ID,
-    context="Customer support conversation about returns"
+    version_id=YOUR_VERSION_ID
 )
 print(f"Created Session: {session.id}")
 
-# 2. Store inference results in the session as the conversation progresses
-result = galtea.inference_results.create(
+# 2. Log inference results (conversation turns) to the session
+galtea.inference_results.create(
     session_id=session.id,
     input="What's your return policy?",
-    output="Our return policy allows returns within 30 days..."
+    output="Our return policy allows returns within 30 days of purchase."
 )
-print(f"Stored inference result: {result.id}")
+galtea.inference_results.create(
+    session_id=session.id,
+    input="What if I lost the receipt?",
+    output="A proof of purchase is required for all returns."
+)
+print(f"Stored 2 inference results in session {session.id}")
 
-# ... (store more inference results as the conversation continues)
-
-# 3. When ready, create evaluation tasks for the whole conversation
-# This can be done after the conversation is finished, or at any point you want to evaluate
-
-galtea.evaluation_tasks.create_from_session(
+# 3. When ready, create evaluation tasks for the entire session
+evaluation_tasks = galtea.evaluation_tasks.create_from_session(
     session_id=session.id,
     metrics=[YOUR_METRIC_NAME]
 )
-print(f"Submitted evaluation tasks for session {session.id}")
+print(f"Submitted {len(evaluation_tasks)} evaluation tasks for session {session.id}")
 ```
 
-## What this means for "Evaluations"
+### Benefits of the New Workflow
 
-The concept of an "Evaluation" (a pairing of a Version and a Test) still exists within the Galtea platform. You will continue to see Evaluations in the Galtea Dashboard. The change is that its creation is now an implicit backend process triggered by your first evaluation task submission for a given `version_id` and `test_case_id` (which determines the `test_id`).
+*   **Track Full Conversations**: Accurately log and analyze multi-turn user interactions.
+*   **Production Monitoring**: Easily send production data to Galtea for continuous evaluation.
+*   **Batch Evaluation**: Evaluate an entire conversation with a single command.
 
-- No more `evaluation_id` needed for `evaluation_tasks.create()`.
-- The backend uses the provided `version_id` and the `test_id` (derived from the `test_case_id`) to associate the task with the correct (implicitly created or existing) Evaluation.
-
-## Summary of Actions Required
-
-1. Remove `optional_properties` parameter in `galtea.versions.create()` calls. Segregate all version optional properties used within it into multiple parameters.
-
-2. **Remove** calls to `galtea.evaluations.create()` from your scripts where you subsequently call `galtea.evaluation_tasks.create()`.
-
-3. **Update** `galtea.evaluation_tasks.create()` calls:
-   - Remove the `evaluation_id` parameter.
-   - Add the `version_id` parameter, passing the ID of the version you are evaluating.
-
-4. **Ensure** you have a `test_case_id` when calling `galtea.evaluation_tasks.create()`, as the `test_id` will be inferred from it by the backend.
-
-## Quick Reference Table
-
-| Change Type | SDK v1.x | SDK v2.0 | Status |
-|-------------|----------|----------|---------|
-| **Version Creation** | `optional_properties` parameter | Direct parameters for optional version properties | 🔄 Replace |
-| **Evaluation Creation** | `galtea.evaluations.create()` required | Automatic (implicit) | ❌ Remove |
-| **evaluation_tasks.create()** | `evaluation_id` parameter | `version_id` parameter | 🔄 Replace |
-| **create_from_production()** | `version_id` parameter | `version_id` parameter | ✅ No change |
-| **Evaluation Dashboard** | Available | Available | ✅ No change |
-
-## Benefits of Migrating
-
-- **Simplified Workflow**: Fewer lines of code and one less explicit step to manage.
-- **Increased Consistency**: `evaluation_tasks.create()` now aligns more closely with the existing `evaluation_tasks.create_from_production()` pattern.
-- **Reduced Overhead**: Less state to manage in your client-side scripts.
-
-We believe these changes will make using the Galtea SDK more straightforward. If you have any questions or encounter any issues during migration, please don't hesitate to reach out to our support team at [support@galtea.ai](mailto:support@galtea.ai).
+If you have any questions or encounter any issues during migration, please don't hesitate to reach out to our support team at [support@galtea.ai](mailto:support@galtea.ai).
