--- a/migration-to-v2.mdx
+++ b/migration-to-v2.mdx
@@ -10,17 +10,19 @@ The core workflow for running predefined tests against a version has been stream
 
 ### Key Changes for Test-Based Evaluations
 
-1.  **Simplified Version Creation**: The `galtea.versions.create()` method now accepts all properties as direct keyword arguments, removing the need for the `optional_props` dictionary.
+1. **Implicit Evaluation Creation**: You no longer need to explicitly call `galtea.evaluations.create()` before creating evaluation tasks.
 
-2.  **Implicit Evaluation Creation**: You no longer need to explicitly call `galtea.evaluations.create()` before creating evaluation tasks.
+2. **`evaluation_tasks.create()` Signature Change**: The `evaluation_id` parameter is removed and replaced with a required `session_id`. It is now used to create evaluation tasks with multi-turn capabilities.
 
-3.  **`evaluation_tasks.create()` Signature Change**: The `evaluation_id` parameter is removed and replaced by a required `session_id`.
+3. **New Single-Turn Task Creation**: The `galtea.evaluation_tasks.create_single_turn()` method is introduced for creating single-turn evaluation tasks directly linked to a version.
 
-4. **Added Sessions**: The new `galtea.sessions.create()` method allows you to create sessions to group multiple inference results (conversation turns) under a single session, making it easier to track multi-turn interactions.
+4. **Simplified Version Creation**: The `galtea.versions.create()` method now accepts all properties as direct keyword arguments, removing the need for the `optional_props` dictionary.
+
+5. **Added Sessions**: The new `galtea.sessions.create()` method allows you to create sessions to group multiple inference results (conversation turns) under a single session, making it easier to track multi-turn interactions.
 
 ### Migration Diff: Test-Case Workflow
 
-Here’s a side-by-side comparison of a typical v1 script and its direct v2 equivalent.
+Here's a side-by-side comparison of a typical v1 script and its direct v2 equivalent.
 
 #### ❌ SDK v1.x (Old Way)
 ```python
@@ -77,26 +79,26 @@ galtea.evaluation_tasks.create_single_turn(
 ```
 
 <Note>
-    This example showcases how to create single-turn evaluation tasks. If you want to evaluate multi-turn conversations, refer to the new session-based workflow in Part 2.
+    This example demonstrates how to create single-turn evaluation tasks. If you want to evaluate multi-turn conversations, refer to the new session-based workflow in Part 2.
 </Note>
 
 ### Summary of Actions for Migration
 
-1.  In `galtea.versions.create()` calls, remove the `optional_props` dictionary and pass its contents as direct keyword arguments.
-2.  **Remove** all calls to `galtea.evaluations.create()`.
-3.  Rename the `galtea.evaluation_tasks.create()` calls to `galtea.evaluation_tasks.create_single_turn()` and **remove** the `evaluation_id` parameter and **add** the `version_id` parameter.
+1. In `galtea.versions.create()` calls, remove the `optional_props` dictionary and pass its contents as direct keyword arguments.
+2. **Remove** all calls to `galtea.evaluations.create()`.
+3. Rename `galtea.evaluation_tasks.create()` calls to `galtea.evaluation_tasks.create_single_turn()`, **remove** the `evaluation_id` parameter, and **add** the `version_id` parameter.
 
 ---
 
 ## Part 2: What's New in v2.0 - The Session-Based Workflow
 
-SDK v2.0 introduces a powerful new way to log and evaluate multi-turn conversations through **Sessions** and **Inference Results**. This is ideal for monitoring production traffic or evaluating complex, interactive scenarios.
+SDK v2.0 introduces a powerful new way to log and evaluate multi-turn conversations through **Sessions** and **Inference Results**. This approach is ideal for monitoring production traffic or evaluating complex, interactive scenarios.
 
 ### New Concepts
 
-*   **Session**: A container for a sequence of interactions (a conversation) between a user and your AI product. You can create a session using `galtea.sessions.create()`.
-*   **Inference Result**: A single turn within a session, containing the `input` and `output`. You log these using `galtea.inference_results.create()`.
-*   **`evaluation_tasks.create()`**: A new way to run evaluations on all inference results within a given session. This allows for easy batch evaluation of entire conversations.
+* **Session**: A container for a sequence of interactions (a conversation) between a user and your AI product. You can create a session using `galtea.sessions.create()`.
+* **Inference Result**: A single turn within a session, containing the `input` and `output`. You log these using `galtea.inference_results.create()`.
+* **`evaluation_tasks.create()`**: A new way to run evaluations on all inference results within a given session. This allows for easy batch evaluation of entire conversations.
 
 ### Example of the New Session-Based Workflow
 
@@ -160,8 +162,8 @@ print(f"Submitted {len(evaluation_tasks)} evaluation tasks for session {session.
 
 ### Benefits of the New Workflow
 
-*   **Track Full Conversations**: Accurately log and analyze multi-turn user interactions.
-*   **Production Monitoring**: Easily send production data to Galtea for continuous evaluation by removing the `test_case_id` parameter when creating sessions and addinf `is_production=True`.
-*   **Batch Evaluation**: Evaluate an entire conversation with a single command.
+* **Track Full Conversations**: Accurately log and analyze multi-turn user interactions.
+* **Production Monitoring**: Easily send production data to Galtea for continuous evaluation by removing the `test_case_id` parameter when creating sessions and adding `is_production=True`.
+* **Batch Evaluation**: Evaluate an entire conversation with a single command.
 
-If you have any questions or encounter any issues during migration, please don't hesitate to reach out to our support team at [support@galtea.ai](mailto:support@galtea.ai).
+If you have any questions or encounter any issues during migration, please don't hesitate to reach out to our support team at [support@galtea.ai](mailto:support@galtea.ai)
